fix nginx error

--- a/docker/nginx-app/app.conf
+++ b/docker/nginx-app/app.conf
@@ -1,4 +1,4 @@
-upstream php-fpm-frontend {
+upstream php-fpm-app {
     server php-fpm:9000;
 }
 
@@ -23,6 +23,6 @@ server {
     }
 
     location ~ \.php$ {
-        fastcgi_pass php-fpm;
+        fastcgi_pass php-fpm-app;
     }
 }
