--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: secret
       POSTGRES_DB: yii2basic
-#    ports:
-#      - '5432:5432'
+    ports:
+      - '5432:5432'
 
   vol_app_source:
     image: tianon/true
