enable debug & gii

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,11 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     environment:
-      POSTGRES_USER: root
+      POSTGRES_USER: yii2basic
       POSTGRES_PASSWORD: secret
       POSTGRES_DB: yii2basic
-    ports:
-      - '5432:5432'
+#    ports:
+#      - '5432:5432'
 
   vol_app_source:
     image: tianon/true
