--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,60 +1,75 @@
-version: '2'
+version: '3'
 
 services:
-
-  postgres:
-    image: postgres:14-alpine
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    environment:
-      POSTGRES_USER: yii2basic
-      POSTGRES_PASSWORD: secret
-      POSTGRES_DB: yii2basic
-#    ports:
-#      - '5432:5432'
-
-  vol_app_source:
-    image: tianon/true
+  app:
+    image: ubuntu:20.04
+    container_name: app
     volumes:
       - ./:/app
+#    command: "true"
+    networks:
+      app-network:
 
-  php-fpm:
-    build:
-      context: ./docker/php-fpm
-    expose:
-      - 9000
-    volumes_from:
-      - vol_app_source
-    depends_on:
-      - postgres
+  db:
+    image: postgres:latest
+    container_name: db
+    restart: always
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - ./docker/db.conf:/etc/postgresql/postgresql.conf
+    command: postgres -c config_file=/etc/postgresql/postgresql.conf
+    environment:
+      POSTGRES_PASSWORD: secret
+      POSTGRES_USER: yii2basic
+      POSTGRES_DB: yii2basic
+#      POSTGRES_HOST_AUTH_METHOD: "true"
+    networks:
+      app-network:
+        # Our application can communicate with the database using this hostname
+        aliases:
+          - postgresdb
 
-  workspace:
+  php:
     build:
-      context: ./docker/workspace
-    volumes_from:
-      - vol_app_source
+      context: ./docker
+    container_name: php
+#    tty: true
+    volumes:
+      - ./:/app
+      - ./docker/log.conf:/usr/local/etc/php-fpm.d/zz-log.conf
     depends_on:
-      - postgres
-
-  yii:
-    build:
-      context: ./docker/workspace
-    volumes_from:
-      - vol_app_source
-    depends_on:
-      - postgres
-    entrypoint: ["php", "yii"]
+      - db
+    links:
+      - db
+      - redis
     working_dir: /app
+    networks:
+      app-network:
 
-  nginx-app:
-    build:
-      context: ./docker/nginx-app
-    depends_on:
-      - php-fpm
-    volumes_from:
-      - vol_app_source
+  webserver:
+    image: nginx:stable
+    container_name: webserver
+    restart: always
     ports:
-      - "8000:8000"
+      - "8000:80"
+    depends_on:
+      - php
+    volumes:
+      - ./:/app
+      - ./docker/app.conf:/etc/nginx/conf.d/defaul.conf
+    links:
+      - php
+    networks:
+      app-network:
+
+  redis:
+    image: redis:latest
+    expose:
+      - 6379
+
+networks:
+  app-network:
 
 volumes:
   postgres_data:
+    external: true
